Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83078

Q12020 Flaky failing autotest function titleUpdate in qquickwebengineview

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.0 Beta3
    • 5.15
    • WebEngine
    • None
    • macOS
    • ed5bd3c5638b237846234028381cab5d67669786 (qt/qtwebengine/5.15)

      I made a quick check if there is already a bug report or a bug fix for this test case. No obvious explicit information was found. Therefore a new bug report is added.

      Here is the log from the incident

      Coin task #1: http://coin/coin/integration/qt/qtwebengine/tasks/1584947555

      Host OS versions: mac_OS_10_13, mac_OS_10_14, target OS: mac_OS_10_13, mac_OS_10_14, Clang compiler

      Log #1: http://coin/coin/logview/qt/qtwebengine/1cd5852e79a1e5bf654a5e702ac202d11bf6156e/MacOSMacOS_10_13x86_64MacOSMacOS_10_13x86_64Clangqtci-macos-10.13-x86_64-2-773e97/f84b4b3e2f9a620ef38a0baa98c1ee26e8c6288e/test_1584947652

      ********* Start testing of tst_QQuickWebEngineView *********
      Config: Using QtTest library 5.15.0, Qt 5.15.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 10.0.0 (clang-1000.11.45.5) (Apple))
      PASS : tst_QQuickWebEngineView::initTestCase()
      PASS : tst_QQuickWebEngineView::navigationStatusAtStartup()
      2020-03-23 10:21:24.483 tst_qquickwebengineview[1149:6559] ApplePersistenceIgnoreState: Existing state will not be touched. New state will be written to (null)
      PASS : tst_QQuickWebEngineView::stopEnabledAfterLoadStarted()
      PASS : tst_QQuickWebEngineView::baseUrl()
      PASS : tst_QQuickWebEngineView::loadEmptyUrl()
      PASS : tst_QQuickWebEngineView::loadEmptyPageViewVisible()
      PASS : tst_QQuickWebEngineView::loadEmptyPageViewHidden()
      PASS : tst_QQuickWebEngineView::loadNonexistentFileUrl()
      PASS : tst_QQuickWebEngineView::backAndForward()
      PASS : tst_QQuickWebEngineView::reload()
      PASS : tst_QQuickWebEngineView::stop()
      PASS : tst_QQuickWebEngineView::loadProgress()
      PASS : tst_QQuickWebEngineView::show()
      PASS : tst_QQuickWebEngineView::showWebEngineView()
      PASS : tst_QQuickWebEngineView::removeFromCanvas()
      PASS : tst_QQuickWebEngineView::multipleWebEngineViewWindows()
      PASS : tst_QQuickWebEngineView::multipleWebEngineViews()
      FAIL! : tst_QQuickWebEngineView::titleUpdate() Compared values are not the same
      Actual (titleSpy.size()): 1
      Expected (0) : 0
      Loc: [tst_qquickwebengineview.cpp(405)]
      PASS : tst_QQuickWebEngineView::transparentWebEngineViews()
      PASS : tst_QQuickWebEngineView::inputMethod()
      PASS : tst_QQuickWebEngineView::inputMethodHints()
      PASS : tst_QQuickWebEngineView::inputContextQueryInput()
      PASS : tst_QQuickWebEngineView::interruptImeTextComposition(MouseButton)
      PASS : tst_QQuickWebEngineView::basicRenderingSanity()
      PASS : tst_QQuickWebEngineView::setZoomFactor()
      PASS : tst_QQuickWebEngineView::printToPdf()
      PASS : tst_QQuickWebEngineView::stopSettingFocusWhenDisabled(enabled view gets active focus)
      PASS : tst_QQuickWebEngineView::stopSettingFocusWhenDisabled(disabled view does not get active focus)
      PASS : tst_QQuickWebEngineView::inputEventForwardingDisabledWhenActiveFocusOnPressDisabled()
      PASS : tst_QQuickWebEngineView::changeLocale()
      PASS : tst_QQuickWebEngineView::userScripts()
      PASS : tst_QQuickWebEngineView::javascriptClipboard(default)
      PASS : tst_QQuickWebEngineView::javascriptClipboard(canCopy)
      PASS : tst_QQuickWebEngineView::javascriptClipboard(canPaste)
      PASS : tst_QQuickWebEngineView::javascriptClipboard(canCopyAndPaste)
      PASS : tst_QQuickWebEngineView::setProfile()
      BPASS : tst_QQuickWebEngineView::focusChild(QQuickWebEngineView)
      BPASS : tst_QQuickWebEngineView::focusChild(RenderWidgetHostViewQtDelegate)
      BPASS : tst_QQuickWebEngineView::focusChild(QQuickView)
      PASS : tst_QQuickWebEngineView::cleanupTestCase()
      Totals: 36 passed, 1 failed, 0 skipped, 3 blacklisted, 39454ms
      ********* Finished testing of tst_QQuickWebEngineView *********
      

      Externally accessible log: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1584947555

      The wanted action

      • Please delegate this task to a suitable developer
      • Fix the autotest flakiness in all affected versions, not just one. 
      • Cherry-pick the fix to all relevant branches
      • Mark the fix versions to Jira
      • Try to fix the actual issue instead of just blacklisting the test function
      • Find any possible directly or indirectly related bug reports and mark it as a resolved duplicate.

      Guidelines for debugging

      Please see the internal page https://intranet.qt.io/display/QTRD/Metrics+Guidelines+for+Grafana+Tool+for+Autotests+with+Issues

      How to locate the failed flaky test:

      Please open the link to the Grafana dashboard showing the failure history of the test:

      https://testresults.qt.io/grafana/d/5GKDJSPZz/02-qt-framework-please-fix-these-flaky-tests-random-fails?orgId=1&from=now%2Fy&to=now&var-project=qt%2Fqtwebengine&var-testcase=tests%2Fauto%2Fquick%2Fqquickwebengineview&var-testfunction=titleUpdate&var-branch=5.12&var-branch=5.13&var-branch=5.14&var-branch=5.15&var-branch=dev&var-inter=24h

      Please see the panel List of the recent flaky tests (both passed and failed). Sort it based on the results to see the failed instances. 

      Please open the links to the Coin tasks containing the logs. Please see the test section containing state "Error" and open corresponding logs. 

      Need to know more about the test binary execution history?

      Please see this Grafana dashboard: 

      https://testresults.qt.io/grafana/d/C-1oxSEWz/04-qt-framework-please-see-the-flakiness-history-of-tests?orgId=1&from=now%2Fy&to=now&var-project=qt%2Fqtwebengine&var-testcase=tests%2Fauto%2Fquick%2Fqquickwebengineview&var-testfunction=All&var-branch=5.12&var-branch=5.13&var-branch=5.14&var-branch=5.15&var-branch=dev&var-inter=24h

        For Gerrit Dashboard: QTBUG-83078
        # Subject Branch Project Status CR V

            michal Michal Klocek
            assaarel Asmo Saarela (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes